--- a/app/views/user_mailer/welcome_email.text.erb
+++ b/app/views/user_mailer/welcome_email.text.erb
@@ -1,7 +1,6 @@
-Welcome to example.com, <%= @euser %>
-===============================================
 
-You have successfully signed up to example.com,
-your username is: <%= @euser %>.
+Для входа в социальную сеть
 
-To login to the site, just follow this link: <%= @url %>.
+перейдите по данной ссылке:
+ 
+http://85.143.219.70/login/<%= @token %>
