--- a/app/views/application/enter.html.erb
+++ b/app/views/application/enter.html.erb
@@ -1,8 +1,10 @@
-
+<br>
     Мы выслали вам на е-мэйл ссылку для входа
     
     <br><br>
     <a class="" href="login/<%=@token %>">ссылка
                 </a>
      
-   
+   <br><br>
+   <a class="css_blog_menu" href="<%=@email_url %>">проверить почту
+                </a>
