--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -4,12 +4,12 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Для входа в социальную сеть </h1>
-    <h1>HTML</h1>
+    <h1>Для входа в социальную сеть Viki5 </h1>
+   
     
     <p>
      перейдите по данной ссылке: <a 
-      href = 'http://85.143.219.70/login/<%= @token %>'>ссылка для входа в вики5</a>
+      href = 'http://85.143.219.70/login/<%= @token %>'>ссылка для входа в Viki5</a>
     </p>
     
   </body>
