--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -9,7 +9,7 @@
     
     <p>
      перейдите по данной ссылке: <a 
-      href = 'http://85.143.219.70/login/<%= @token %>'>ссылка для входа в Viki5</a>
+      href = 'http://inviainvest.ru/login/<%= @token %>'>ссылка для входа в Viki5</a>
     </p>
     
   </body>
