--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -22,7 +22,7 @@ html, body {
     
     
     height: 100%;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Open Sans', Verdana,sans-serif;;
     font-size: 16px;
     line-height: 22px;
     background: #f3f3f3;
@@ -146,7 +146,7 @@ cursor:pointer;
     
     text-align: center;
     DISPLAY: block;
-    font-family: 'Open Sans', sans-serif;
+  /*  font-family: 'Open Sans', sans-serif; */
     
     FONT-SIZE: 16px;
     FONT-WEIGHT: bold;
@@ -167,7 +167,7 @@ cursor:pointer;
     
     text-align: center;
     DISPLAY: block;
-    font-family: 'Open Sans', sans-serif;
+  /*  font-family: 'Open Sans', sans-serif; */
     
     FONT-SIZE: 16px;
     FONT-WEIGHT: bold;
