--- a/app/views/application/enter.html.erb
+++ b/app/views/application/enter.html.erb
@@ -1,8 +1,12 @@
 <br>
-    Мы выслали вам на е-мэйл ссылку для входа
+   <div style='color:white'> Мы выслали вам на е-мэйл ссылку для входа<br>
+   для того чтобы войти в сеть, перейдите по данной ссылке
+   </div>
     
-    
+    <br><br>
+    <a class="" href="login/<%=@token %>">ссылка
+                </a>	
      
    <br><br>
-   <a class="css_blog_menu" href="<%=@email_url %>">проверить почту
+   <a class="css_blog_menu" href="<%=@email_url %>">ПРОВЕРИТЬ ПОЧТУ
                 </a>
