--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -178,7 +178,14 @@
                 <label class="add_foto_menu" >Видео</label> 
 				 <input name="video" type="text" class="form-control add_foto_menu" placeholder="вставьте ссылку на youtube">
 				 <br><br>
-                <button type="submit" class=" css_button_menu wide">Отправить</button>  
+				 
+				 <div class='send'>
+                <button type="submit" class=" css_button_menu wide onepix">Отправить</button> 
+                </div>
+                
+                <div class='send_text'>
+                 
+                </div>
                    <br>
     </form>
    </div> 
