--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,7 +50,7 @@
           <% else %>
           <div class="div_avatar">
           <img class="mini_avatar menu" 
-                src="viki5.jpg" 
+                src="/viki5.jpg" 
                 alt="" border="0"
                 width=100 height=100>
           </div>
@@ -73,15 +73,16 @@
          </td>
         <td> <a class="css_blog_menu" href="/all">ВСЕ БЛОГИ </a> </td>
         </tr>
-        <tr>
+        <tr height=107px >
         <td>
           
           </td>
         
-        <td>
+        <td><a class="css_blog_menu" href="/tusa">ТУСОВКА </a>
             </td>
         
         </tr>
+        
         
         
      </table>
