--- a/app/views/main/feed.html.erb
+++ b/app/views/main/feed.html.erb
@@ -31,10 +31,7 @@
         <% end%>
     
     
-    <div class="post_in css_margin">
-    
-     <%= h(post.body).gsub("\n", "<br>").html_safe %>
-    </div>
+    <div class="post_in css_margin"><%= h(post.body).gsub("\n", "<br>").html_safe %></div>
     
 <table border="0">
             <tr>
