--- a/app/views/main/tusa.html.erb
+++ b/app/views/main/tusa.html.erb
@@ -16,20 +16,38 @@
   
    <div class='css_margin post'>
     
-   <h3>Стартап тусовка</h3> <br>
-      
-  Стартап тусовка - это:
+   <h3>Привет всем! </h3> <br>
+   
+   Приглашаю вас на оффлайновую встречу будущих стартаперов Находки. <br><br>
+
+<b>Зачем мне приходить на стартап-тусовку?</b> <br><br>
+
+1) для того чтобы окружить себя активными и  стремящимися к успеху людьми<br>
+2) для того чтобы обменяться идеями для стартапов <br>
+3) для того чтобы найти партнеров для совместного старта проекта <br>
+<br>
+<b>Где будут проходить встречи стартаперов? </b><br><br>
+
+Встречи будут проходить в антикафе "Квадрат". <br><br>
+
+<b>Когда? </b><br><br>
+
+Первая встреча состоится тогда, когда наберется 10 заявок на встречу. <br><br>
+
+<b>А это платно?</b> <br><br>
+
+Только в части оплаты времени вашего нахождения в анитикафе. Владельцы антикафе "Квадрат" берут с каждого посетителя 2 рубля в минуту за право находиться 
+в своем заведении. Если хотите бесплатно - организуйте встречу стартаперов у себя дома:)
+ 
    
    <br><br>
-   1) знакомство с самыми активными ребятами Находки<br>
-   2) обмен идеями для стартапов<br>
-   3) возможность найти партнеров для совместного старта проекта<br>
-    
-    <br><br>
-    
- </div>
+
+<b>Как записаться на встречу?</b> <br><br>
+
+Для того чтобы записаться на встречу введите 
+ 
    
-   Для записи на встречу введи свое имя и телефон:
+   свое имя и телефон:<br>
    
   
   
