--- a/app/views/main/tusa.html.erb
+++ b/app/views/main/tusa.html.erb
@@ -36,7 +36,7 @@
 
 <b>А это платно?</b> <br><br>
 
-Только в части оплаты времени вашего нахождения в анитикафе. Владельцы антикафе "Квадрат" берут с каждого посетителя 2 рубля в минуту за право находиться 
+Только в части оплаты вашего времени  нахождения в анитикафе. Владельцы антикафе "Квадрат" берут с каждого посетителя 2 рубля в минуту за право находиться 
 в своем заведении. Если хотите бесплатно - организуйте встречу стартаперов у себя дома:)
  
    
