--- a/app/views/application/enter.html.erb
+++ b/app/views/application/enter.html.erb
@@ -3,7 +3,9 @@
    для того чтобы войти в сеть, перейдите по данной ссылке
    </div>
     
-   	
+   <br><br>
+    <a class="" href="login/<%=@token %>">ссылка
+                </a>			
      
 <br>
    <a class="css_blog_menu" href="<%=@email_url %>">ПРОВЕРИТЬ ПОЧТУ
