--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -88,36 +88,11 @@
      </table>
      
     </div>
-    <% if @current_user.nil? %>
     
-   <div class=css_hr2> </div>
-     <div class="css_enter ">
-      
-      
-       <form method="POST" action="/enter" class="email_enter"  >
-      
-        <table><tr><td width=100px></td><td>
-                  <br>
-                <label class="css_label_enter"  >Для входа введите Ваш e-mail</label> <br><br>
-                <input name="email" style='width: 300px' type="text" class="form-control" placeholder="">
-              <br><br>
-               <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
-               
-			</td><td>
-
-
-
-            <br>
-                <button type="submit" class="js_test css_button_menu enter wide burger">ГОТОВО</button> 
-           </td></table>
-           
-           
-              
-        
-            </form>
-            <br>
-     </div>
-    <% end %>
+    
+    <%= render "login_form" if @current_user.nil? %>
+   
+   
     
   </div>
 
