--- a/app/views/main/feed.html.erb
+++ b/app/views/main/feed.html.erb
@@ -56,7 +56,7 @@
                          <% else %> 
                               <a class="js_read  css_button_menu"
                               href="/api/read/<%= post.user.id %>">
-                                  <% if post.user.following_users.any?  %>читаю<% else %>читать<% end %></a> 
+                                  <% if post.user.following_i_ams.any?  %>читаю<% else %>читать<% end %></a> 
                     
                         <% end %>
                     <% end %>
