--- a/app/views/layouts/sochi.html.erb
+++ b/app/views/layouts/sochi.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
  
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width">
   <title>Workspace</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
@@ -12,6 +12,7 @@
 		<meta charset="utf-8">
 		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Nunito:400,300,700" rel="stylesheet" type="text/css">
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800&subset=latin,cyrillic" rel="stylesheet" type="text/css">
 </head>
 <body>
     
@@ -21,30 +22,30 @@
 			<nav>
 				<ul>
 					<li><a href="#about"><i class="fa fa-question-circle"></i>ask</a></li>
-					<li><a href="#features"><i class="fa fa-vk"></i>vkontakte</a></li>
+					<li><a href="\"><i class="fa fa-vk"></i>vkontakte</a></li>
 			
 					<li><a href="#screenshots"><i class="fa fa-instagram"></i>instagramm</a></li>
-					<li><a href="#download"><i class="fa fa-gear"></i>settings</a></li>
+				
+				<% if @current_user %>
+					<li><a href="\settings"><i class="fa fa-gear"></i>settings</a></li>
+				<% else %>
+					<li><a href="#download" class="s_enter"><i class="fa fa-arrow-circle-right"></i>enter</a></li>
+				<% end %>
 				</ul>
 			</nav>
 	</div>	
 	
-		<div class="wide">
+		<div class="wide_logo">
 	
 			<div class="main">
-			    <a href="#download"><i class="fa fa-plus-circle "></i></a>
 			    
+		
 		
 			    
 			<ul id="menu">
-	
 				<li>
-					<a href="#">все блогеры</a>
-					<ul>
-						<li><a href="#">избранные блогеры</a></li>
-						<li><a href="#">мой блог</a></li>
-						<li><a href="#">сохраненные посты</a></li>
-					</ul>
+					<a href="#"><div class="fa fa-plus-circle "></div> новый пост</a>
+					
 				</li>
 				<li>
 					<a href="#">пользователи</a>
@@ -54,9 +55,20 @@
 						
 					</ul>
 				</li>
+	
+				<li>
+					<a href="#">все блогеры <div class="fa fa-caret-down "></div> </a>
+					<ul>
+						<li><a href="#">избранные блогеры</a></li>
+						<li><a href="#">мой блог</a></li>
+						<li><a href="#">сохраненные посты</a></li>
+					</ul>
+				</li>
+				
 				
 				</li>
 			</ul>    
+			 
 			 
 			</div>   
 		</div> 	    
@@ -64,7 +76,7 @@
 			    
 <div style="clear:both"> </div>
   
-  
+<%= render 'sochi/s_login_form' %>
   
  
      
@@ -79,14 +91,18 @@
     <br>
     
     
+  <div class="yield"> 
+<br>
+<div class="new">
     
+     </div>   
    
 
   
 <%= yield %>
 
   </div>
-  
+   </div> 
   
 
   
