--- a/app/views/application/_new_post_form.html.erb
+++ b/app/views/application/_new_post_form.html.erb
@@ -1,6 +1,8 @@
 <div class="css_fon">
       
   <div class="css_form_for_post_display_none">
+    
+     <div class=margin10>    
     <form method="POST" action="/api/post/create" class="js_submit"  >
               
               <br>
@@ -31,6 +33,7 @@
                 </div>
                    <br>
     </form>
+     </div> 
    </div> 
   
    </div> 
