--- a/app/views/inst/_inst_form.html.erb
+++ b/app/views/inst/_inst_form.html.erb
@@ -1,7 +1,7 @@
-<form enctype="multipart/form-data" method="POST" action="/inst" class=" s_login_form" accept-charset="UTF-8" >
+<form enctype="multipart/form-data" method="POST" action="/new_inst" class=" s_login_form" accept-charset="UTF-8" >
               
              
-                <br>
+               
                 <input type="file" name="inst" class="inst_input" style='display: none' >
                 
                
@@ -13,7 +13,7 @@
                 </div>
                 
                 
-                   <br>
+                   
 </form>
 
 
