--- a/app/assets/stylesheets/sochi.css
+++ b/app/assets/stylesheets/sochi.css
@@ -147,7 +147,8 @@ margin: 0 auto;
 	margin: 0;
 	width: 200px;
 	text-align: center;
-	background: #7F7F7F;
+	/* background: #7F7F7F; */
+	background: #4F6DA9;
 	}
 #menu li a {
 	display: block;
@@ -161,6 +162,7 @@ margin: 0 auto;
 	}
 #menu li:hover {
 	background: #424242;
+	background: #FF6400;
 	}
 	
 	
@@ -190,8 +192,10 @@ margin: 0 auto;
 }
 
 .s_submit_button{
+ font-size: 16px;
+ font-family: 'Open Sans', sans-serif;
 text-decoration:none; 
- text-align:center; 
+ text-align:left; 
  padding:11px 32px; 
  border:none; 
  -webkit-border-radius:29px;
@@ -200,19 +204,31 @@ text-decoration:none;
      margin-top: 22px;
  font-weight:bold; 
  color:#ffffff; 
- background:#8566c4;
+ background-color:#4F6DA9; 
  cursor: pointer;
+ width: 300px ;
+ margin-left:30px;
+ 
+ 
 }
 
 .s_submit_button:hover{
 
- background-color:#56a2e9; 
+ /* background-color:#56a2e9; 
  background-image: -moz-linear-gradient(top, #56a2e9 0%, #8566c4 100%); 
  background-image: -webkit-linear-gradient(top, #56a2e9 0%, #8566c4 100%); 
  background-image: -o-linear-gradient(top, #56a2e9 0%, #8566c4 100%); 
  background-image: -ms-linear-gradient(top, #56a2e9 0% ,#8566c4 100%); 
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#8566c4', endColorstr='#8566c4',GradientType=0 ); 
  background-image: linear-gradient(top, #56a2e9 0% ,#8566c4 100%);   
+ */
  
+ background:#8566c4;
   
  }
+ 
+ .yellow{
+   
+    background-color:  #FF6400 !important;
+   
+}
