--- a/app/views/ask/ask_feed_users.html.erb
+++ b/app/views/ask/ask_feed_users.html.erb
@@ -14,7 +14,7 @@
                 ></td>
                 
                 <td width="100%"><a class="css_feedusers_name"
-                       href="/<%= user.id %>"><%= user.name %></a></td>
+                       href="/answer/<%= user.id %>"><%= user.name %></a></td>
                        
                 
                 <td >
