--- a/app/views/main/settings.html.erb
+++ b/app/views/main/settings.html.erb
@@ -14,8 +14,10 @@
                
                
                 <label >Аватар</label> <br>
-                 <div style='float:left; width:200px; height:200px'>
+                 
+               <div style="float:left; width:200px; height:200px">
                 <img id="" class="image_preview" src="<%= @current_user.avatar.url unless @current_user.avatar.nil? %>" alt="" border="0">
+               
                 <br>
                
                 </div>
