--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,10 +19,10 @@ html, body {
     display: block;
     margin: 0px;
     width: 100%;
-    
+      
     
     height: 100%;
-    font-family: 'Open Sans', Verdana,sans-serif;;
+    font-family: 'Open Sans', Verdana,sans-serif;
     font-size: 16px;
     line-height: 22px;
     background: #f3f3f3;
@@ -69,7 +69,12 @@ cursor:pointer;
     
       max-width:200px;
       max-height:200px;
+  
+     margin: 10px 0 0 0;     
+      
 }
+
+
 
 
 .main{
@@ -188,8 +193,8 @@ cursor:pointer;
 
 .css_button_menu:hover {
 
-    COLOR: White;
-    BACKGROUND-COLOR: #FF6400;
+    COLOR: #FF6400;
+    /* BACKGROUND-COLOR: #FF6400; */
 }
 
 .mini_avatar{
@@ -286,6 +291,7 @@ width: 200px;
     
       
     COLOR: #0173BC;
+    
     FONT-SIZE: 16px;
     FONT-WEIGHT: bold;
     TEXT-DECORATION: none;
@@ -296,8 +302,9 @@ width: 200px;
 }
 .css_feedusers_name:hover {
 
-    COLOR: White;
-    BACKGROUND-COLOR: #FF6400;
+    /* COLOR: White;
+    BACKGROUND-COLOR: #FF6400; */
+    COLOR: #FF6400;
 }
 
 .css_hr {
