--- a/app/views/ask/ask_feed.html.erb
+++ b/app/views/ask/ask_feed.html.erb
@@ -25,7 +25,7 @@
                 ></td>
                 
                 <td width="100%"><a class="css_feedusers_name"
-                       href="/<%= ask.target.id unless ask.target.nil? %>"><%= ask.target.name unless ask.target.nil? %></a></td>
+                       href="/answer/<%= ask.target.id unless ask.target.nil? %>"><%= ask.target.name unless ask.target.nil? %></a></td>
                
                
                
