--- a/app/views/main/feed.html.erb
+++ b/app/views/main/feed.html.erb
@@ -22,7 +22,7 @@
         <% end%>
     
     
-    <div class="post_in css_margin"><%= h(post.body).gsub("\n", "<br>").html_safe %></div>
+    <div class="post_in css_margin media"><%= h(post.body).gsub("\n", "<br>").html_safe %></div>
     
 <table border="0">
             <tr>
