--- a/app/views/layouts/wishes.html.erb
+++ b/app/views/layouts/wishes.html.erb
@@ -14,7 +14,7 @@
 
 <div class="g_logo">
 <div class="g_inner_logo">
-  <img class="logo_ava" src="/uploads/user/avatar/35/315494e8-96a3-4de0-87ff-c06022fe2e1c_B.jpg">
+  <img class="logo_ava" src="<%= image_path("sunny.jpg") %>">
 </div>
 
 <div class="logo_name">Sunny Lipnitskaya</div>
