--- a/app/views/layouts/wishes.html.erb
+++ b/app/views/layouts/wishes.html.erb
@@ -34,17 +34,23 @@
   </div>
 
 
-</div>
 
+
+
+
+
+  <div style='clear:both'></div>
   <div class="g_enter">
     <div class="g_enter_margin">
-      <div class="g_enter_text">Для того чтобы написать пожелание войди на сайт <br>
+      <div class="g_enter_text">Для того чтобы написать пожелание войдите на сайт <br>
       </div>
       <div class="count_button">
       <a href='/auth/vkontakte' class="g_enter_button">войти через vk</a>
       </div>
     </div>
   </div>
+  
+
   
   <div class="g_enter_form">
     <div class="g_enter_margin">
@@ -68,7 +74,8 @@
     </div>
   </div>
 
-
+</div>  
+  
 
   
 <%= yield %>
