--- a/app/assets/stylesheets/wishes.css
+++ b/app/assets/stylesheets/wishes.css
@@ -133,6 +133,18 @@
  background-color:#BA1C58 ;
 } 
 
+.g_logo_enter{
+  
+  height:310px;
+ 
+} 
+
+.g_logo_form{
+  
+  height:410px;
+ 
+} 
+
 .g_inner_logo{
  margin: 0 auto;
  max-width: 610px;
@@ -183,6 +195,7 @@
 
 .count_button{
    padding:21px 0px 0px 0px;
+   
 }
 
 
@@ -218,11 +231,12 @@ margin-left:20px;
 
 .g_enter{
   display:none;
+ /*
   height:140px;
   background-color: #8E5C3B;
   background-image: linear-gradient(-10deg, #FF6CA8 0%, #BA1C58 100%);
  
-  
+  */
   
 }
 
@@ -236,7 +250,7 @@ margin-left:20px;
  text-align: center;
   color:white;
   font-size: 16px;
-    padding: 24px 0px 20px 0px;
+    padding: 4px 0px 20px 0px;
     font-weight: bold;
 }
 
@@ -269,10 +283,12 @@ margin-left:210px;
 .g_enter_form{
   
    display:none;
+  
+  /*
   height:270px;
   background-color: #8E5C3B;
   background-image: linear-gradient(-10deg, #FF6CA8 0%,  #BA1C58 100%);
-  
+  */
 }
 
 .g_inner_form{
