--- a/app/views/layouts/request.html.erb
+++ b/app/views/layouts/request.html.erb
@@ -32,8 +32,8 @@
 <div class="req_logo_2">
     <div class="g_inner_logo">
         <div class="logo_name" >  Обращение к Юле </div>
-    <div class="req_logo_text">  Юля, официальные интерьвю, которые ты изредка даешь телевидинию - это
-    всего лишь жалкое подобие общения с болельшиками. По настоящему круто - это трансляция в перископе. Тебя любит и обожает
+    <div class="req_logo_text">  Юля, официальные интервью, которые ты изредка даешь телевидению - это
+    всего лишь жалкое подобие общения с болельщиками. По настоящему круто - это трансляция в перископе. Тебя любит и обожает
     половина страны. Не бросай нас, твоих болельщиков.  Проведи трансляцию в перископе!
     Поговори с нами!
     </div>
@@ -44,11 +44,11 @@
 <div class="req_logo_3">
     <div class="g_inner_logo">
         <div class="logo_name" style="text-align: center;">  Присоединиться к просьбе</div>
-    <div class="req_logo_text">  Уважаемые фанаты, поклонники и болельшики Юли! 
+    <div class="req_logo_text">  Уважаемые фанаты, поклонники и болельщики Юли! 
     Чем больше человек присоединится к просьбе, тем больше вероятность того, что
     Юля прислушается к нашему пожеланию и действительно проведет трансляцию в перископе.
     
- Для того чтобы присединиться к просьбе нажмите кнопку ниже:
+ Для того чтобы присоединиться к просьбе нажмите кнопку ниже:
     
     </div>
     
