--- a/app/views/request/index.html.erb
+++ b/app/views/request/index.html.erb
@@ -1,4 +1,4 @@
- <div class="req_center">к просьбе присоединилсь</div>
+ <div class="req_center">к просьбе присоединились</div>
 
   <% if @grid%>
 <div class="grid">
